# MSc-thesis

./: .gitignore  README.md  reqs.txt
UR_SiLA/: LabwareTransferManipulatorController.xml  LabwareTransferSiteController.sila.xml  RobotController.sila.xml  URController.xml  ca.pem  pyproject.toml  setup.py
UR_SiLA/UR_Server/: demo_script.py  server.py  test_tcp.py
UR_SiLA/UR_Server/feature_implementations/: __init__.py  labwaretransfercontroller_impl.py  robotexample_impl.py
UR_SiLA/UR_SiLA/: server.py
UR_SiLA/UR_SiLA/UR_test_env/: UR_Arm.py  UR_Arm_Abs.py  test.py
UR_SiLA/UR_SiLA/UR_test_env2/: Poses.py  UR_Arm.py  labware.py  test.py
UR_SiLA/UR_SiLA/UR_utils/: UR_Arm.py  labware.py  test.py
UR_SiLA/UR_SiLA/feature_implementations/: robotcontroller_impl.py
UR_SiLA/fdl_files/: LabwareTransferController-v1_0.sila.xml
UR_SiLA/test/: ConnectionController.sila.xml  ca.pem
UR_SiLA/test/clients/: connection_client.py
UR_SiLA/test/test/: UR_Arm.py  UR_sdu.py  __main__.py  server.py
UR_final/: LabwareTransferManipulatorURController.xml  LabwareTransferSiteFestoController.sila.xml  LabwareTransferSiteURController.sila.xml  RobotController.sila.xml  ca.pem  client.py  handover.proto  handover_pb2.py  pyproject.toml  time_decapping.csv
UR_final/UR_SiLA_final/: __main__.py  server.py
UR_final/UR_SiLA_final/UR_test_env2/: Poses.py  UR_Arm.py  labware.py  test.py  test_thread.py
UR_final/UR_SiLA_final/UR_test_env3/: Poses.py  UR_Arm.py  UR_Arm_Abs.py  labware.py  new_row.py  test.py  time.csv  time_decapping.csv  times.ipynb  times_decap.ipynb
(+163 files in other folders)
