[project]
name = "UR_SiLA"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["UR_SiLA*"]

[tool.setuptools.package-data]
"UR_SiLA.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
