[project]
name = "sila2_example_server"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sila2_example_server*"]

[tool.setuptools.package-data]
"sila2_example_server.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
